We do a moderate amount of trolling